emoji_window/emoji_window.h


// Button click callback type (stdcall)
// 参数: button_id - 按钮ID, parent_hwnd - 父窗口句柄
typedef void (__stdcall *ButtonClickCallback)(int button_id, HWND parent_hwnd);


// Tab 切换回调函数类型 (stdcall 调用约定)
typedef void (__stdcall *TAB_CALLBACK)(HWND hTabControl, int selectedIndex);


// 窗口大小改变回调函数类型 (stdcall 调用约定)
typedef void (__stdcall *WindowResizeCallback)(HWND hwnd, int width, int height);

    __declspec(dllexport) HWND __stdcall create_window_bytes_ex(const unsigned char* title_bytes, int title_len, int x, int y, int width, int height, UINT32 titlebar_color, UINT32 client_bg_color);


    __declspec(dllexport) int __stdcall create_emoji_button_bytes(
        HWND parent,
        const unsigned char* emoji_bytes,
        int emoji_len,
        const unsigned char* text_bytes,
        int text_len,
        int x, int y, int width, int height,
        UINT32 bg_color
    );


    __declspec(dllexport) void __stdcall set_button_click_callback(ButtonClickCallback callback);

    
    // 设置按钮位置和大小
    __declspec(dllexport) void __stdcall SetButtonBounds(int button_id, int x, int y, int width, int height);

    
    __declspec(dllexport) void __stdcall set_message_loop_main_window(HWND hwnd);

    __declspec(dllexport) int __stdcall run_message_loop();


    // ========== TabControl 功能 ==========

    // 创建 TabControl
    __declspec(dllexport) HWND __stdcall CreateTabControl(
        HWND hParent,
        int x,
        int y,
        int width,
        int height
    );


    // 添加 Tab 页
    __declspec(dllexport) int __stdcall AddTabItem(
        HWND hTabControl,
        const unsigned char* title_bytes,
        int title_len,
        HWND hContentWindow  // 可选，若为 NULL 则自动创建
    );


    // 设置 Tab 切换回调
    __declspec(dllexport) void __stdcall SetTabCallback(
        HWND hTabControl,
        TAB_CALLBACK pCallback
    );


    // 切换到指定 Tab
    __declspec(dllexport) BOOL __stdcall SelectTab(
        HWND hTabControl,
        int index
    );


    // 获取 Tab 数量
    __declspec(dllexport) int __stdcall GetTabCount(
        HWND hTabControl
    );


    // 获取指定 Tab 的内容窗口句柄
    __declspec(dllexport) HWND __stdcall GetTabContentWindow(
        HWND hTabControl,
        int index
    );


    // 设置 TabControl 的位置和大小
    __declspec(dllexport) int __stdcall SetTabControlBounds(
        HWND hTabControl,
        int x,
        int y,
        int width,
        int height
    );


    // ========== TabControl 外观函数 ==========

    // 设置标签页固定尺寸（宽度和高度）
    __declspec(dllexport) int __stdcall SetTabItemSize(
        HWND hTab,
        int width,
        int height
    );


    // 设置指定标签页的内容区域背景色（ARGB 格式）
    __declspec(dllexport) int __stdcall SetTabContentBgColor(
        HWND hTab,
        int index,
        UINT32 color
    );


    // ========== TabControl 交互增强函数 ==========

    // 设置标签页是否显示关闭按钮（closable: 1=显示, 0=隐藏）
    __declspec(dllexport) int __stdcall SetTabClosable(
        HWND hTab,
        int closable
    );


    // 设置标签页是否可拖拽排序（draggable: 1=可拖拽, 0=不可拖拽）
    __declspec(dllexport) int __stdcall SetTabDraggable(
        HWND hTab,
        int draggable
    );


    // 设置标签栏是否可滚动（scrollable: 1=可滚动, 0=不可滚动/多行）
    __declspec(dllexport) int __stdcall SetTabScrollable(
        HWND hTab,
        int scrollable
    );


    // ========== 窗口大小改变回调 ==========

    // 设置窗口大小改变回调
    __declspec(dllexport) void __stdcall SetWindowResizeCallback(
        WindowResizeCallback callback
    );


    // ========== 编辑框功能 ==========

    // 创建编辑框（vertical_center 仅单行有效）
    __declspec(dllexport) HWND __stdcall CreateEditBox(
        HWND hParent,
        int x, int y, int width, int height,
        const unsigned char* text_bytes,
        int text_len,
        UINT32 fg_color,
        UINT32 bg_color,
        const unsigned char* font_name_bytes,
        int font_name_len,
        int font_size,
        BOOL bold,
        BOOL italic,
        BOOL underline,
        int alignment,  // 0=左, 1=中, 2=右
        BOOL multiline,
        BOOL readonly,
        BOOL password,
        BOOL has_border,
        BOOL vertical_center  // 文本垂直居中（仅单行有效）
    );


    // 设置编辑框位置和大小
    __declspec(dllexport) void __stdcall SetEditBoxBounds(
        HWND hEdit,
        int x, int y, int width, int height
    );


    // ========== 标签功能 ==========

    // 创建标签
    __declspec(dllexport) HWND __stdcall CreateLabel(
        HWND hParent,
        int x, int y, int width, int height,
        const unsigned char* text_bytes,
        int text_len,
        UINT32 fg_color,
        UINT32 bg_color,
        const unsigned char* font_name_bytes,
        int font_name_len,
        int font_size,
        BOOL bold,
        BOOL italic,
        BOOL underline,
        int alignment,  // 0=左, 1=中, 2=右
        BOOL word_wrap  // 是否换行显示
    );


    // 设置标签文本
    __declspec(dllexport) void __stdcall SetLabelText(
        HWND hLabel,
        const unsigned char* text_bytes,
        int text_len
    );


    // 设置标签位置和大小
    __declspec(dllexport) void __stdcall SetLabelBounds(
        HWND hLabel,
        int x, int y, int width, int height
    );


    // ========== 进度条功能 ==========

    // 创建进度条
    __declspec(dllexport) HWND __stdcall CreateProgressBar(
        HWND hParent,
        int x, int y, int width, int height,
        int initial_value,  // 初始值 (0-100)
        UINT32 fg_color,
        UINT32 bg_color,
        BOOL show_text,     // 是否显示百分比文本
        UINT32 text_color   // 文本颜色
    );


    // 设置进度条位置和大小
    __declspec(dllexport) void __stdcall SetProgressBarBounds(
        HWND hProgressBar,
        int x, int y, int width, int height
    );